overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+#homepage {
     overflow-x: hidden;
 }
 
@@ -129,7 +129,7 @@
 #signUpDiv {
     border-radius: 16px;
     background: #FFF;
-    /* box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.05), 0px 4px 4px 4px rgba(0, 0, 0, 0.05), 0px 4px 4px 4px rgba(0, 0, 0, 0.05); */
+    box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.05);
 }
 
 /* <=============== Signup ends ==============> */
